gpgme provides functions for importing keys from key data, from URLs, and from the result of a keylisting, but it lacks support for importing keys given by key id (e.g. the signer key id) from a keyserver without first running a keylisting.
Description
Description
Revisions and Commits
Revisions and Commits
| rGPGMEPP Gpgme plus plus | |||
| rGPGMEPP35bc09378a07 cpp: Add internal adapter for passing a vector of strings to gpgme | |||
| rGPGMEPP3843f98f2a5d cpp: Allow import of keys given by key ids | |||
| rM GPGME | |||
| rMca1c30b6fa29 qt: Add job to import keys given by key ids | |||
| rMec8d1ee13fce qt: Add helper for converting QStringList to vector of strings | |||
| rMbbaeeb5b9d5c cpp: Allow import of keys given by key ids | |||
| rM3d7810e8d940 cpp: Add internal adapter for passing a vector of strings to gpgme | |||
| rM3c2cff74b535 core: New function gpgme_op_receive_keys | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • aheinecke | T5805 Kleopatra or GnuPG: Auto retrieve signers key | ||
| Resolved | • ikloecker | T5808 gpgme: Add support for importing keys given by key id from a keyserver |